kubernetes/onlinecompiler-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: onlinecompiler

spec:
  selector:
    matchLabels:
      app: onlinecompiler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 20
      maxUnavailable: 20
  replicas: 1
  template:
    metadata:
      labels:
        app: onlinecompiler
    spec:

      containers:
        - name: onlinecompiler
          image: ccr.ccs.tencentyun.com/jansora/onlinecompiler:7.2
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: nfs-pvc
              subPath: 'onlinecompiler'
              mountPath: "/app/data"
      volumes:
        - name: nfs-pvc
          persistentVolumeClaim:
            claimName: nfs-pvc
