kubernetes/github-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: github-ingress
#  annotations:
#    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: github-onlinecompiler.kubernetes.jansora.com
      http:
        paths:
          - backend:
              service:
                name: onlinecompiler-service
                port:
                  number: 8080
            pathType: Prefix
            path: /
